# Dark_History_01

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters  screenshot-1511286427.cam  screenshot-1511302020.cam  screenshot-1511304810.cam  screenshot-1511310573.cam  screenshot-1517992130.cam  solution.sln
STL files/: CuttingTool_Alternative0.STL  CuttingTool_Alternative1.STL  CuttingTool_Alternative2.STL  CuttingTool_Alternative3.STL  CuttingTool_Alternative4.STL  CuttingTool_Alternative5.STL  CuttingTool_Alternative6.STL  CuttingTool_Alternative7.STL  CuttingTool_Alternative8.STL  CuttingTool_Alternative9.STL  NikonTurningTool.STL
outputfile/: accuracy0005.txt  accuracy001.txt  accuracy0015.txt  accuracy002.txt  accuracy0025.txt  accuracy003.txt  accuracy0035.txt  accuracy004.txt  accuracy0045.txt  accuracy005.txt  result0005.txt  result001.txt  result0015.txt  result002.txt  result0025.txt  result003.txt  result0035.txt  result004.txt  result0045.txt  result005.txt  test001.txt  time0005.txt  time001.txt  time0015.txt  time002.txt  time0025.txt  time003.txt  time0035.txt  time004.txt  time0045.txt  time005.txt
sorce/: AddingNoise.hpp  CalPCA.hpp  CalRotationMatrix.hpp  CalSphereVolume.hpp  CorrespondenceGrouping.hpp  DataMatching.hpp  Detectors.hpp  Errata.hpp  FeatureDescription.hpp  FeaturePointExtraction36.hpp  FeaturePointExtractionHarris.hpp  ForFixPoint.hpp  InterpolationSTL.hpp  JacobiAnother.hpp  JacobiAnother2.hpp  KeypointNormals.hpp  LeastSquaresMethods.hpp  MT.h  MakeAccuracyFile.hpp  MakeMeasurementPPF.hpp  MakeModelPPF.hpp  NormalDirection.hpp  Output.h  PCLViewer.hpp  PPF.hpp  PPFio.hpp  Projection.hpp  RANSAC.hpp  RandomGenerator.cpp  RandomGenerator.h  RemoveOutliers.hpp  RunJacobi.hpp  Simulation20171030.hpp  Simulation20171113.hpp  Simulation20171127.hpp  Simulation20180101.hpp  Simulation20180207.hpp  SurfaceNormals.hpp  VoxelGrid.hpp  basicCalculation.hpp  (+17 more)
